Adds delete and add
User can now delete items and add new ones to the list.

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,5 +6,14 @@ appDescription=Demo app to show what I got
 productListTitle=Products
 homePageTitle=Demo App
 
+# Add Fragment
+title=New Product
+addMsg=Product added successfully.
+productName=Product Name
+productCategory=Category
+productSupplier=Supplier
+productAdd=Add
+productCancel=Cancel
+
 # Detail Page
 detailPageTitle=Demo app - Details
