Adds Edit functionality
User can now edit name, category and supplier of a product.

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,14 +6,21 @@ appDescription=Demo app to show what I got
 productListTitle=Products
 homePageTitle=Demo App
 
-# Add Fragment
-title=New Product
-addMsg=Product added successfully.
+#Dialogs
 productName=Product Name
 productCategory=Category
 productSupplier=Supplier
-productAdd=Add
 productCancel=Cancel
+
+# Add Dialog
+addTitle=New Product
+addMsg=Product added successfully.
+productAdd=Add
+
+#Edit Dialog
+editTitle=Edit Product
+productEdit=Edit
+editMsg=Product edited successfully.
 
 # Detail Page
 detailPageTitle=Demo app - Details
