--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -24,3 +24,5 @@ editMsg=Product edited successfully.
 
 # Detail Page
 detailPageTitle=Demo app - Details
+detailPageCategory=Category
+detailPageSupplier=Supplier
